--- a/hub/index.html
+++ b/hub/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>CHANGE ME</title>
+	<title>My Hub | Home</title>
 	<link rel="stylesheet" href="hubstyles.css">
 
 </head>
@@ -21,9 +21,9 @@
 			<!-- horizontal navbar -->
 			<div class="box-columns-space-around">
 				<a class="active" href="index.html">Home</a>
-				<a href="#">Assignments</a>
-				<a href="#">Schedule</a>
-				<a href="#">GitHub</a>
+				<a href="https://mybanner.gvsu.edu/PROD/bwskfshd.P_CrseSchd" target="_blank">Schedule</a>
+				<a href="https://mybb.gvsu.edu/webapps/portal/execute/tabs/tabAction?tab_tab_group_id=_1_1" target="_blank">Blackboard</a>
+				<a href="https://github.com/SteveLucasCS" target="_blank">GitHub</a>
 			</div>
 		</nav>
 
