--- a/hub/index.html
+++ b/hub/index.html
@@ -21,9 +21,10 @@
 			<!-- horizontal navbar -->
 			<div class="box-columns-space-around">
 				<a class="active" href="index.html">Home</a>
-				<a href="https://mybanner.gvsu.edu/PROD/bwskfshd.P_CrseSchd" target="_blank">Schedule</a>
+				<a href="schedule.html" target="_blank">Schedule</a>
 				<a href="https://mybb.gvsu.edu/webapps/portal/execute/tabs/tabAction?tab_tab_group_id=_1_1" target="_blank">Blackboard</a>
 				<a href="https://github.com/SteveLucasCS" target="_blank">GitHub</a>
+				<a href="portfolio.html">Portfolio</a>
 			</div>
 		</nav>
 
@@ -40,6 +41,65 @@
 						<li>Question: "List any mathematical concepts you can think of (up to five) with your own explanations"</li>
 					</ul>
 				</section>
+				<section>
+					<h4>Software Eng.</h4>
+					<ul>
+						<li>Quiz on Syllabus due Wednesday</li>
+					</ul>
+				</section>
+				<section>
+					<h4>Art 271</h4>
+					<ul>
+						<li>10 pictures of potential Automata machine ideas</li>
+						<li>Digital Calipers</li>
+						<li>Ruler / Straight Edge</li>
+						<li>Exacto Knife (pencil shaped for precise cutting)</li>
+						<li>Mouse from Home</li>
+				</section>
+
+				<h2>Course Syllabi and Links</h2>
+				<details>
+					<section>
+						<h3>MTH 201</h3>
+						<details>
+							<div class="indented">
+								<a href="media/math_syllabus.pdf" target="_blank">Syllabus - MTH 201</a>
+							</div>
+						</details>
+					</section> <!-- end Math section -->
+					<section>
+						<h3>BIO 120</h3>
+						<details>
+							<div class="indented">
+								<a href="media/bio_syllabus.pdf" target="_blank">Syllabus - BIO 120</a>
+							</div>
+						</details>
+					</section> <!-- end Bio section -->
+					<section>
+						<h3>CIS 350</h3>
+						<details>
+							<div class="indented">
+								<a href="media/cis350_syllabus.pdf" target="_blank">Syllabus - CIS 350</a>
+							</div>
+						</details>
+					</section> <!-- end CIS section -->
+					<section>
+						<h3>ART 271</h3>
+						<details>
+							<div class="indented">
+								Course not appearing on Blackboard.
+							</div>
+						</details>
+					</section> <!-- end Art section -->
+					<section>
+						<h3>WRT 350</h3>
+						<details>
+							<div class="indented">
+								Syllabus not posted on Blackboard.
+							</div>
+						</details>
+					</section> <!-- end WRT section -->
+				</details> <!-- end details tab for Course Syllabi and Links -->
 
 				<h2>Completed Assignments</h2>
 				<details>
