--- a/hub/schedule.html
+++ b/hub/schedule.html
@@ -50,9 +50,11 @@ function windowOpen(window_url) {
     <!-- horizontal navbar -->
     <div class="box-columns-space-around">
       <a href="index.html">Home</a>
+      <a href="https://drive.google.com/drive/u/3/folders/17C1ukKGNSuSBOKIaAg8ITAmu9BYMP-2P" target="_blank">Course Notes</a>
       <a class="active" href="schedule.html" target="_blank">Schedule</a>
       <a href="https://mybb.gvsu.edu/webapps/portal/execute/tabs/tabAction?tab_tab_group_id=_1_1" target="_blank">Blackboard</a>
       <a href="https://github.com/SteveLucasCS" target="_blank">GitHub</a>
+      <a href="portfolio.html">Portfolio</a>
     </div>
   </nav>
 <div class="pagebodydiv">
