--- a/hub/index.html
+++ b/hub/index.html
@@ -5,15 +5,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>My Hub | Home</title>
 	<link rel="stylesheet" href="hubstyles.css">
+	<link rel="shortcut icon" href="favicon.ico" />
 
 </head>
 
 <body>
-	<div id="page-wrap">
+	<div id="index-page">
 
 		<header>
 			<h1>My Hub</h1>
-			<img id="gvsu-logo" src="media/gvsu_logo_white.svg" alt="gvsu logo">
+			<a href="https://www.gvsu.edu/" target="_blank"><img id="gvsu-logo" src="media/gvsu_logo_white.svg" alt="gvsu logo"></a>
 		</header>
 
 
@@ -21,7 +22,7 @@
 			<!-- horizontal navbar -->
 			<div class="box-columns-space-around">
 				<a class="active" href="index.html">Home</a>
-				<a href="https://drive.google.com/drive/u/3/folders/17C1ukKGNSuSBOKIaAg8ITAmu9BYMP-2P" target="_blank">Course Notes</a>
+				<a href="coursenotes.html">Course Notes</a>
 				<a href="schedule.html" target="_blank">Schedule</a>
 				<a href="https://mybb.gvsu.edu/webapps/portal/execute/tabs/tabAction?tab_tab_group_id=_1_1" target="_blank">Blackboard</a>
 				<a href="https://github.com/SteveLucasCS" target="_blank">GitHub</a>
@@ -33,23 +34,24 @@
 		<main>
 			<article>
 				<h2>Outstanding Assignments</h2>
-				<h3>8/27/2018</h3>
+
+				<h3>8/29/2018</h3>
 				<section>
-					<h4>Calculus</h4>
+					<h4>MTH 201 - Calculus 1</h4>
 					<ul>
-						<li>Read 1.7 and review Algebra and Trig</li>
-						<li>Due next wednesday (after labor day) WORKSHEET PACKET</li>
-						<li>Question: "List any mathematical concepts you can think of (up to five) with your own explanations"</li>
+						<li>Due next wednesday (after labor day) Worksheet Packet</li>
 					</ul>
 				</section>
+
 				<section>
-					<h4>Software Eng.</h4>
+					<h4>CIS 350 - Intro. Software Engineering</h4>
 					<ul>
-						<li>Quiz on Syllabus due Wednesday</li>
+						<li>Reading and Reaction (on BB, under assignments)</li>
 					</ul>
 				</section>
+
 				<section>
-					<h4>Art 271</h4>
+					<h4>ART 271 - 3D Digital Design and Modeling</h4>
 					<ul>
 						<li>10 pictures of potential Automata machine ideas</li>
 						<li>Digital Calipers</li>
@@ -58,8 +60,17 @@
 						<li>Mouse from Home</li>
 				</section>
 
+				<section>
+					<h4>WRT 350 - Business Writing</h4>
+				</section>
+
+			</article> <!-- end OUTSTANDING ASSIGMENTS article -->
+
+
+			<article>
 				<h2>Course Syllabi and Links</h2>
 				<details>
+
 					<section>
 						<h3>MTH 201</h3>
 						<details>
@@ -68,6 +79,7 @@
 							</div>
 						</details>
 					</section> <!-- end Math section -->
+
 					<section>
 						<h3>BIO 120</h3>
 						<details>
@@ -76,6 +88,7 @@
 							</div>
 						</details>
 					</section> <!-- end Bio section -->
+
 					<section>
 						<h3>CIS 350</h3>
 						<details>
@@ -84,6 +97,7 @@
 							</div>
 						</details>
 					</section> <!-- end CIS section -->
+
 					<section>
 						<h3>ART 271</h3>
 						<details>
@@ -92,6 +106,7 @@
 							</div>
 						</details>
 					</section> <!-- end Art section -->
+
 					<section>
 						<h3>WRT 350</h3>
 						<details>
@@ -100,10 +115,15 @@
 							</div>
 						</details>
 					</section> <!-- end WRT section -->
-				</details> <!-- end details tab for Course Syllabi and Links -->
 
+				</details> <!-- end details tab for Course Syllabi and Links -->
+			</article> <!-- end SYLLABI article -->
+
+
+			<article>
 				<h2>Completed Assignments</h2>
 				<details>
+
 					<section>
 						<h4>BIO</h4>
 						<details>
@@ -112,16 +132,29 @@
 							</ul>
 						</details>
 					</section>
+
 					<section>
-						<h4>Calculus</h4>
+						<h4>MATH 201</h4>
 						<details>
 							<ul>
-								<li>Textbook Ordered</li>
+								<li>Read 1.7 and review Algebra and Trig</li>
+								<li>Question: "List any mathematical concepts you can think of (up to five) with your own explanations"</li>
 							</ul>
 						</details>
 					</section>
-				</details>
-			</article>
+
+					<section>
+						<h4>CIS 350</h4>
+						<details>
+							<ul>
+								<li>Syllabus Quiz (100% - 9/9)</li>
+							</ul>
+						</details>
+					</section>
+
+				</details> <!-- completed assignments details fold -->
+			</article> <!-- end COMPLETED ASSIGNMENTS article -->
+
 		</main>
 
 
