--- a/hub/schedule.html
+++ b/hub/schedule.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="schedule_files/web_defaultapp.css" type="text/css">
 <link rel="stylesheet" href="schedule_files/web_defaultprint.css" type="text/css" media="print">
 <link rel="stylesheet" href="hubstyles.css" type="text/css">
+<link rel="shortcut icon" href="favicon.ico" />
 <title>Week at a Glance</title>
 <meta http-equiv="Content-Script-Type" name="Default_Script_Language" content="text/javascript">
 <script language="JavaScript" type="text/javascript">
@@ -42,7 +43,7 @@ function windowOpen(window_url) {
 <body cz-shortcut-listen="true">
   <header>
     <h1>My Hub</h1>
-    <img id="gvsu-logo" src="media/gvsu_logo_white.svg" alt="gvsu logo">
+    <a href="https://www.gvsu.edu/" target="_blank"><img id="gvsu-logo" src="media/gvsu_logo_white.svg" alt="gvsu logo"></a>
   </header>
 
 
@@ -50,8 +51,8 @@ function windowOpen(window_url) {
     <!-- horizontal navbar -->
     <div class="box-columns-space-around">
       <a href="index.html">Home</a>
-      <a href="https://drive.google.com/drive/u/3/folders/17C1ukKGNSuSBOKIaAg8ITAmu9BYMP-2P" target="_blank">Course Notes</a>
-      <a class="active" href="schedule.html" target="_blank">Schedule</a>
+      <a class="active" href="coursenotes.html" target="_blank">Course Notes</a>
+      <a href="schedule.html" target="_blank">Schedule</a>
       <a href="https://mybb.gvsu.edu/webapps/portal/execute/tabs/tabAction?tab_tab_group_id=_1_1" target="_blank">Blackboard</a>
       <a href="https://github.com/SteveLucasCS" target="_blank">GitHub</a>
       <a href="portfolio.html">Portfolio</a>
