--- a/hub/portfolio.html
+++ b/hub/portfolio.html
@@ -3,17 +3,18 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>My Hub | Home</title>
+	<title>My Hub | Portfolio</title>
 	<link rel="stylesheet" href="hubstyles.css">
+	<link rel="shortcut icon" href="favicon.ico" />
 
 </head>
 
 <body>
-	<div id="page-wrap">
+	<div id="portfolio-page">
 
 		<header>
 			<h1>My Hub</h1>
-			<img id="gvsu-logo" src="media/gvsu_logo_white.svg" alt="gvsu logo">
+			<a href="https://www.gvsu.edu/" target="_blank"><img id="gvsu-logo" src="media/gvsu_logo_white.svg" alt="gvsu logo"></a>
 		</header>
 
 
@@ -21,7 +22,7 @@
 			<!-- horizontal navbar -->
 			<div class="box-columns-space-around">
 				<a href="index.html">Home</a>
-				<a href="https://drive.google.com/drive/u/3/folders/17C1ukKGNSuSBOKIaAg8ITAmu9BYMP-2P" target="_blank">Course Notes</a>
+				<a href="coursenotes.html">Course Notes</a>
 				<a href="schedule.html" target="_blank">Schedule</a>
 				<a href="https://mybb.gvsu.edu/webapps/portal/execute/tabs/tabAction?tab_tab_group_id=_1_1" target="_blank">Blackboard</a>
 				<a href="https://github.com/SteveLucasCS" target="_blank">GitHub</a>
@@ -31,10 +32,6 @@
 
 
 		<main>
-			<article>
-				<h2>Resume</h2>
-				<a class="indented" href="steve_lucas_resume.pdf" target="_blank">Download Resume</a>
-			</article>
 			<article>
 				<h2>Project Portfolio</h2>
 				<section>
