--- a/hub/art271.html
+++ b/hub/art271.html
@@ -34,19 +34,37 @@
 
 		<main>
 			<article>
+
 				<h2>10 Automata Examples</h2>
-				<ol>
-					<li><img src="media/automatas/cat.gif" alt="cat automata"></li>
-					<li><img src="media/automatas/snake.gif" alt="snake automata"></li>
-					<li><img src="media/automatas/cupid.gif" alt="cupid automata"></li>
-					<li><img src="media/automatas/dog2.gif" alt="dog two automata"></li>
-					<li><img src="media/automatas/fire.gif" alt="fire automata"></li>
-					<li><img src="media/automatas/flying-pig.gif" alt="pig automata"></li>
-					<li><img src="media/automatas/psy.gif" alt=" psy automata"></li>
-					<li><img src="media/automatas/teddy-bear.gif" alt="teddy bear automata"></li>
-					<li><img src="media/automatas/trex.gif" alt="trex automata"></li>
-					<li><img src="media/automatas/dog.gif" alt="dog one automata"></li>
-				</ol>
+				<section>
+					<details>
+						<ol>
+							<li><img src="media/automatas/cat.gif" alt="cat automata"></li>
+							<li><img src="media/automatas/snake.gif" alt="snake automata"></li>
+							<li><img src="media/automatas/cupid.gif" alt="cupid automata"></li>
+							<li><img src="media/automatas/dog2.gif" alt="dog two automata"></li>
+							<li><img src="media/automatas/fire.gif" alt="fire automata"></li>
+							<li><img src="media/automatas/flying-pig.gif" alt="pig automata"></li>
+							<li><img src="media/automatas/psy.gif" alt=" psy automata"></li>
+							<li><img src="media/automatas/teddy-bear.gif" alt="teddy bear automata"></li>
+							<li><img src="media/automatas/trex.gif" alt="trex automata"></li>
+							<li><img src="media/automatas/dog.gif" alt="dog one automata"></li>
+						</ol>
+					</details>
+				</section>
+
+				<h2>Dog Automata Templates</h2>
+				<section>
+					<details>
+						<ol>
+							<li><img src="media/automatas/golden_template_1.jpg" alt="golden template one"></li>
+							<li><img src="media/automatas/golden_template_2.jpg" alt="golden template two"></li>
+							<li><img src="media/automatas/golden_template_3.jpg" alt="golden template three"></li>
+							<li><img src="media/automatas/small_dog_template_1.jpg" alt="small dog template one"></li>
+							<li><img src="media/automatas/small_dog_template_2.jpg" alt="small dog template two"></li>
+						</ol>
+					</details>
+				</section>
 			</article>
 		</main>
 
