--- a/hub/index.html
+++ b/hub/index.html
@@ -39,25 +39,30 @@
 				<section>
 					<h4>MTH 201 - Calculus 1</h4>
 					<ul>
-						<li>Due next wednesday (after labor day) Worksheet Packet</li>
+						<li>Section 2.1 Homework (due Monday)</li>
+						<li>Section 2.2 Homework (due Monday)</li>
+					</ul>
+				</section>
+
+				<section>
+					<h4>BIO 120 - Intro. to Biology</h4>
+					<ul>
+						<li>Bio Lab - Microscopy</li>
+						<li>Online Homework</li>
 					</ul>
 				</section>
 
 				<section>
 					<h4>CIS 350 - Intro. Software Engineering</h4>
 					<ul>
-						<li>Reading and Reaction (on BB, under assignments)</li>
 					</ul>
 				</section>
 
 				<section>
 					<h4>ART 271 - 3D Digital Design and Modeling</h4>
 					<ul>
-						<li>10 pictures of potential Automata machine ideas</li>
-						<li>Digital Calipers</li>
-						<li>Ruler / Straight Edge</li>
-						<li>Exacto Knife (pencil shaped for precise cutting)</li>
-						<li>Mouse from Home</li>
+						<li>Rhino Tutorials - Penguin, Water Bottle, and Drafting</li>
+					</ul>
 				</section>
 
 				<section>
@@ -147,7 +152,21 @@
 						<h4>CIS 350</h4>
 						<details>
 							<ul>
+								<li>Reading and Reaction (on BB, under assignments)</li>
 								<li>Syllabus Quiz (100% - 9/9)</li>
+							</ul>
+						</details>
+					</section>
+
+					<section>
+						<h4>ART 271</h4>
+						<details>
+							<ul>
+								<li>10 pictures of potential Automata machine ideas</li>
+								<li>Digital Calipers</li>
+								<li>Ruler / Straight Edge</li>
+								<li>Exacto Knife (pencil shaped for precise cutting)</li>
+								<li>Mouse from Home</li>
 							</ul>
 						</details>
 					</section>
