--- a/hub/index.html
+++ b/hub/index.html
@@ -39,7 +39,6 @@
 				<section>
 					<h4>MTH 201 - Calculus 1</h4>
 					<ul>
-						<li>Section 2.1 Homework (due Monday)</li>
 						<li>Section 2.2 Homework (due Monday)</li>
 					</ul>
 				</section>
@@ -61,7 +60,6 @@
 				<section>
 					<h4>ART 271 - 3D Digital Design and Modeling</h4>
 					<ul>
-						<li>Rhino Tutorials - Penguin, Water Bottle, and Drafting</li>
 					</ul>
 				</section>
 
@@ -107,7 +105,7 @@
 						<h3>ART 271</h3>
 						<details>
 							<div class="indented">
-								Course not appearing on Blackboard.
+								<a href="media/art271_syllabus.pdf" target="_blank">Syllabus - ART 271</a>
 							</div>
 						</details>
 					</section> <!-- end Art section -->
@@ -116,7 +114,7 @@
 						<h3>WRT 350</h3>
 						<details>
 							<div class="indented">
-								Syllabus not posted on Blackboard.
+								<a href="media/wrt350_syllabus.pdf" target="_blank">Syllabus - WRT 350</a>
 							</div>
 						</details>
 					</section> <!-- end WRT section -->
